--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.9",
-    "@tanstack/react-query": "^5.90.8",
+    "@tanstack/react-query": "^5.90.11",
     "ethers": "^6.15.0",
-    "next": "^14.2.33",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "viem": "^2.39.0",
-    "wagmi": "^2.19.4"
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
+    "pino-pretty": "^13.1.2",
     "tailwindcss": "^4"
   }
 }
